# Malena

./: .clang-format  .gitignore  CMakeLists.txt  DOCUMENTATION.md  LICENSE  LICENSE.md  README.md
.github/workflows/: ci.yml
Documentation/css/: malena-claude.css
ECS/: ECSManager.cpp  ECSManager.h  EntitiesAndComponents.h  EventManagerECS.cpp  EventManagerECS.h  HealthSystem.cpp  MovementSystem.cpp  MovementSystem.h  RenderingSystem.cpp  SizeSystem.cpp
Malena/: common.hpp
cmake/: MalenaConfig.cmake.in  MelenaConfig.cmake.in
examples/: ButtonController.cpp  ButtonController.h  CMakeLists.txt  RectangleApp.cpp  RectangleApp.h
examples/BasicExample/: BasicExample.cpp  BasicExample.h  BasicExampleManifest.h  CMakeLists.txt  main.cpp
examples/BrickGame/: BrickGame.cpp  BrickGame.h
examples/Jeopardy/: Jeopardy.cpp  Jeopardy.h  JeopardyBoardController.cpp  JeopardyBoardController.h  JeopardyModel.cpp  JeopardyModel.h  JeopardyView.cpp  JeopardyView.h
examples/SignalBoard/: CMakeLists.txt
examples/SignalBoard/src/: EventLog.h  Events.h  Messages.h  ScoreDisplay.h  SignalBoard.cpp  SignalBoard.h  SignalBoardManifest.h  SignalTower.h  main.cpp
examples/UIControls/: CMakeLists.txt  UIControls.cpp  UIControls.h  main.cpp
src/: AppController.cpp  AppController.h  AppLogic.cpp  AppLogic.h  Application.cpp  Application.h  CMakeLists.txt  Component.cpp  Component.h  ComponentsManager.cpp  ComponentsManager.h  Controller.cpp  Controller.h  ConvexButton.h  EventManager.cpp  EventsManager.h  FontManager.cpp  FontManager.h  Helper.cpp  Helper.h  Manager.h  MessageManager.cpp  MessageManager.h  MouseEvents.cpp  MouseEvents.h  MouseEvents_nontemplate.cpp  Positionable.cpp  Positionable.h  PositionableTemplates.cpp  Rectangle.cpp  Rectangle.h  RectangleApp.cpp  RectangleApp.h  Shape.cpp  Shape.h  StateManager.cpp  StateManager.h  Tween.h  UIComponent.cpp  UIComponent.h  (+12 more)
src/Adapters/: CoreAdapter.cpp  UIComponentAdapter.cpp  UIComponentAdapter.h
src/Application/: Application.cpp  Application.h
src/Controllers/: Controller.h  UIController.cpp  UIController.h
src/Core/: Core.cpp  CoreAdapter.cpp  CoreManager.cpp  DeferredOperationsManager.tpp  UIController.cpp
src/ECS/: ECSManager.cpp  EventManagerECS.cpp  HealthSystem.cpp  MovementSystem.cpp  RenderingSystem.cpp  SizeSystem.cpp
src/ECS/Core/: DeferredOperationsManager.tpp  EventManagerECS.cpp
src/ECS/System/: MovementSystem.cpp  SizeSystem.cpp
src/Engine/App/: AppManager.cpp  Application.cpp
src/Engine/Events/: EventManager.cpp  EventReceiver.cpp  EventReceiver.tpp  Fireable.cpp  Fireable.tpp  _EventsManager.cpp
src/Engine/Messaging/: MessageManager.cpp  MessageManager.tpp
src/Engine/Networking/: HttpClient.cpp  NetworkManager.cpp  NetworkRequest.cpp  NetworkResponse.cpp  WebSocketClient.cpp
src/Engine/Plugins/: PluginManager.cpp
src/Engine/Theme/: ThemeManager.cpp
src/Events/: EventBus.cpp
src/Graphics/: Button.cpp  Button.h  Button.tpp  Carousel.cpp  Circle.h  CircleButton.cpp  CircleButton.h  Convex.h  ConvexButton.cpp  ConvexButton.h  Core.tpp  Cursor.cpp  Cursor.h  Graphic.tpp  Grid.cpp  Grid.h  Rectangle.h  RectangleButton.cpp  RectangleButton.h  RoundedRectangle.cpp  Shape.cpp  Shape.h  Sprite.h  Text.cpp  Text.h  TextBox.cpp  TextInput.cpp  TextInput.h  Typer.cpp  Typer.h  VertexArray.cpp  VertexArray.h
src/Graphics/Base/: Button.tpp  Graphic.tpp
src/Graphics/Controls/: ButtonToggle.cpp  Carousel.cpp  Checkbox.cpp  CheckboxGroup.cpp  CircleButton.cpp  ConvexButton.cpp  List.cpp  ListItem.cpp  MenuBar.cpp  PillToggle.cpp  RadioButton.cpp  RadioGroup.cpp  RectangleButton.cpp  ScrollPane.cpp  SegmentToggle.cpp  Select.cpp  SideMenu.cpp  SplitPanel.cpp  Tab.cpp  TabbedPanel.cpp  Toggle.cpp  ToggleGroup.cpp  Toolbar.cpp
src/Graphics/Layouts/: Grid.cpp  Panel.cpp
src/Graphics/Primitives/: Circle.cpp  Convex.cpp  Rectangle.cpp  RoundedRectangle.cpp  VertexArray.cpp
src/Graphics/Sprites/: Sprite.cpp
src/Graphics/Text/: Cursor.cpp  RichTextBuffer.cpp  RichTextRenderer.cpp  Text.cpp  TextArea.cpp  TextBox.cpp  TextInput.cpp  TextInputBase.cpp  Typer.cpp
src/Interfaces/: Core.cpp  UIComponent.cpp  UIComponent.h  UIComponent.tpp  UIComponentWith.cpp  Updateable.h  With.cpp
src/Managers/: AssetsManager.tpp  ComponentsManager.cpp  ConfigManager.cpp  DeferredOperationsManager.tpp  EventManager.cpp  EventsManager.h  FlagManager.tpp  FontManager.cpp  FontManager.h  FontManager.tpp  Manager.h  MessageManager.cpp  MessageManager.tpp  PluginManager.cpp  ResourceManager.cpp  StateManager.cpp  StateManager.tpp  UIManager.cpp  UIManager.h  UIManagerEDA.cpp  UIManagerEDA.h  UIManagerMVC.cpp  UIManagerMVC.h  WindowManager.h
src/Manifests/: Manifest.tpp
src/Plugin/: PluginHost.cpp
src/Resources/: AssetsManager.tpp  ConfigManager.tpp  FlagManager.tpp  FontManager.tpp  MessageManager.cpp  ResourceManager.tpp  StateManager.tpp
src/Traits/: Clickable.cpp  CustomFlaggable.cpp  CustomFlaggable.tpp  CustomFlaggale.tpp  CustomStateful.cpp  Customizable.cpp  Draggable.cpp  EventPublisher.cpp  Fadeable.tpp  FireableBase.h  Flaggable.cpp  Focusable.cpp  Hoverable.cpp  Keyable.cpp  Messenger.cpp  Messenger.h  Messenger.tpp  Positionable.cpp  Positionable.h  Positionable.tpp  PositionableTemplates.cpp  Scrollable.cpp  Selectable.cpp  Stateful.cpp  Stateful.h  Subscribable.cpp  Subscribable.tpp  Unsubscribable.cpp  Unsubscribable.tpp  Updatable.cpp
src/Traits/Base/: Fireable.cpp  Fireable.tpp  Reactive.cpp
src/Traits/Communication/: Messenger.cpp  Messenger.tpp  Subscribable.tpp  Unsubscribable.cpp
src/Traits/Interaction/: Clickable.cpp  Draggable.cpp  Focusable.cpp  Hoverable.cpp  Keyable.cpp  Scrollable.cpp  Selectable.cpp
src/Traits/Lifecycle/: Updatable.cpp
src/Traits/Spatial/: Positionable.cpp  Positionable.tpp
src/Traits/State/: CustomFlaggable.tpp
src/Traits/Visual/: Fadeable.cpp
src/Utilities/: Align.tpp  Helper.cpp  ImageRects.cpp  MouseEvents.cpp  MouseEvents.h  MouseEvents_nontemplate.cpp  ShaderLibrary.cpp  TextManipulators.cpp  TextManipulators.h  TextureSlicer.cpp
(+365 files in other folders)
